--- a/cart.html
+++ b/cart.html
@@ -46,38 +46,40 @@
         <a href="about.html" class="top_nav_link">Tuyển dụng</a>
       </div>
     </div>
+    <div onclick="openSubNav(this, 'phone_nav_link')" id="phone_nav">
+      <div id="phone_nav_header">Menu</div>
+      <a href="index.html" class="phone_nav_link">Trang chủ</a>
+      <a href="about.html" class="phone_nav_link">Giới thiệu</a>
+      <a href="category.html" class="phone_nav_link">Sản phẩm</a>
+      <a href="signup.html" class="phone_nav_link">Đăng ký</a>
+    </div>
     <div id="cart">
       <div id="cart_list">
         <div class="cart_item">
-          <img src="./ao-thun-be-trai.jpg" alt="" class="cart_item_img" />
+          <img src="./ao-khoac-nu.jpg" alt="" class="cart_item_img" />
           <div class="cart_item_info">
-            <div class="cart_item_name">Áo thun khủng long bé trai</div>
+            <div class="cart_item_name">Áo khoác nữ đen</div>
             <div class="cart_item_price">Giá: 420.000 vnđ</div>
           </div>
         </div>
         <div class="cart_item">
-          <img src="./ao-thun-be-trai.jpg" alt="" class="cart_item_img" />
+          <img src="./ao-thun-spider-man.jpg" alt="" class="cart_item_img" />
           <div class="cart_item_info">
-            <div class="cart_item_name">Áo thun khủng long bé trai</div>
-            <div class="cart_item_price">Giá: 420.000 vnđ</div>
+            <div class="cart_item_name">Áo thun Spider-Man</div>
+            <div class="cart_item_price">Giá: 300.000 vnđ</div>
           </div>
         </div>
         <div class="cart_item">
-          <img src="./ao-thun-be-trai.jpg" alt="" class="cart_item_img" />
+          <img src="./ao-thun-7-mau.jpg" alt="" class="cart_item_img" />
           <div class="cart_item_info">
-            <div class="cart_item_name">Áo thun khủng long bé trai</div>
-            <div class="cart_item_price">Giá: 420.000 vnđ</div>
-          </div>
-        </div>
-        <div class="cart_item">
-          <img src="./ao-thun-be-trai.jpg" alt="" class="cart_item_img" />
-          <div class="cart_item_info">
-            <div class="cart_item_name">Áo thun khủng long bé trai</div>
-            <div class="cart_item_price">Giá: 420.000 vnđ</div>
+            <div class="cart_item_name">Áo thun 7 màu</div>
+            <div class="cart_item_price">Giá: 200.000 vnđ</div>
           </div>
         </div>
       </div>
       <div id="cart_summary">
+        <div>Số lượng: 3 cái</div>
+        <div>Tổng giá: 920.000 vnđ</div>
         <button>Thanh toán trực tuyến</button
         ><button>Thanh toán khi nhận hàng</button>
       </div>
