--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
         <a href="about.html" class="top_nav_link">Tuyển dụng</a>
       </div>
     </div>
+    <div onclick="openSubNav(this, 'phone_nav_link')" id="phone_nav">
+      <div id="phone_nav_header">Menu</div>
+      <a href="index.html" class="phone_nav_link">Trang chủ</a>
+      <a href="about.html" class="phone_nav_link">Giới thiệu</a>
+      <a href="category.html" class="phone_nav_link">Sản phẩm</a>
+      <a href="signup.html" class="phone_nav_link">Đăng ký</a>
+    </div>
     <div id="slide_show">
       <a href="./category.html" class="slide" id="slide_1"></a>
       <a href="./category.html" class="slide" id="slide_2"></a>
@@ -63,82 +70,29 @@
         <div onclick="moveBanner(3, this)" class="option"></div>
       </div>
     </div>
-    <div id="super_side_nav">
-      <div id="side_nav">
-        <a href="category.html">Bộ sưu tập thời trang</a>
-        <a href="category.html">Quần áo bé trai</a>
-        <a href="category.html">Quần áo bé gái</a>
-        <a href="category.html">Quần áo trẻ sơ sinh</a>
-        <a href="category.html">Trang sức</a>
-        <a href="category.html">Phụ kiện</a>
-      </div>
+    <div class="sn" id="side_nav">
+      <a href="category.html">Bộ sưu tập thời trang</a>
+      <a href="category.html">Quần áo bé trai</a>
+      <a href="category.html">Quần áo bé gái</a>
+      <a href="category.html">Quần áo trẻ sơ sinh</a>
+      <a href="category.html">Trang sức</a>
+      <a href="category.html">Phụ kiện</a>
     </div>
     <div id="main_panel">
-      <div class="main_section">
-        <div class="main_section_header">Thời trang picnic</div>
-        <div class="main_section_content">
-          <a href="product.html" class="main_section_content_item">
-            <img src="./ao-khung-long-be-trai.jpg" alt="" />
-          </a>
-          <a href="product.html" class="main_section_content_item">
-            <img src="./quan-dai-kaki-be-gai.jpg" alt="" />
-          </a>
-          <a href="product.html" class="main_section_content_item">
-            <img src="./ao-thun-ke-sac-be-trai.jpg" alt="" />
-          </a>
-          <a href="product.html" class="main_section_content_item">
-            <img src="./ao-khoac-tho-ni-be-trai.jpg" alt="" />
-          </a>
-        </div>
-      </div>
-      <div class="main_section">
-        <div class="main_section_header">Thời trang bé gái</div>
-        <div class="main_section_content">
-          <div class="main_section_content_item">
-            <img src="./ao-khung-long-be-trai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
-            <img src="./quan-dai-kaki-be-gai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
-            <img src="./ao-thun-ke-sac-be-trai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
-            <img src="./ao-khoac-tho-ni-be-trai.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-      <div class="main_section">
-        <div class="main_section_header">Thời trang bé trai</div>
-        <div class="main_section_content">
-          <div class="main_section_content_item">
-            <img src="./ao-khung-long-be-trai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
-            <img src="./quan-dai-kaki-be-gai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
-            <img src="./ao-thun-ke-sac-be-trai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
-            <img src="./ao-khoac-tho-ni-be-trai.jpg" alt="" />
-          </div>
-        </div>
-      </div>
       <div class="main_section">
         <div class="main_section_header">Bộ sưu tập phụ kiện</div>
         <div class="main_section_content">
           <div class="main_section_content_item">
-            <img src="./ao-khung-long-be-trai.jpg" alt="" />
+            <img src="./kep_toc.jpg" alt="" />
           </div>
           <div class="main_section_content_item">
-            <img src="./quan-dai-kaki-be-gai.jpg" alt="" />
+            <img src="./dep-lo.jpg" alt="" />
           </div>
           <div class="main_section_content_item">
-            <img src="./ao-thun-ke-sac-be-trai.jpg" alt="" />
+            <img src="./cap-xach.jpg" alt="" />
           </div>
           <div class="main_section_content_item">
-            <img src="./ao-khoac-tho-ni-be-trai.jpg" alt="" />
+            <img src="./sandal.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -149,13 +103,13 @@
             <img src="./ao-khung-long-be-trai.jpg" alt="" />
           </div>
           <div class="main_section_content_item">
+            <img src="./ao-ba-lo.jpg" alt="" />
+          </div>
+          <div class="main_section_content_item">
+            <img src="./yem-jean-be-gai.jpg" alt="" />
+          </div>
+          <div class="main_section_content_item">
             <img src="./quan-dai-kaki-be-gai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
-            <img src="./ao-thun-ke-sac-be-trai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
-            <img src="./ao-khoac-tho-ni-be-trai.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -163,16 +117,16 @@
         <div class="main_section_header">Quần áo mới nhất</div>
         <div class="main_section_content">
           <div class="main_section_content_item">
-            <img src="./ao-khung-long-be-trai.jpg" alt="" />
+            <img src="./ao-thun-ngan-tay-be-trai.jpg" alt="" />
           </div>
           <div class="main_section_content_item">
-            <img src="./quan-dai-kaki-be-gai.jpg" alt="" />
+            <img src="./ao-khoac-tho-ni-be-trai.jpg" alt="" />
           </div>
           <div class="main_section_content_item">
             <img src="./ao-thun-ke-sac-be-trai.jpg" alt="" />
           </div>
           <div class="main_section_content_item">
-            <img src="./ao-khoac-tho-ni-be-trai.jpg" alt="" />
+            <img src="./t-shirt.jpg" alt="" />
           </div>
         </div>
       </div>
