--- a/about.html
+++ b/about.html
@@ -50,6 +50,13 @@
         <a href="#" class="top_nav_link">Tuyển dụng</a>
       </div>
     </div>
+    <div onclick="openSubNav(this, 'phone_nav_link')" id="phone_nav">
+      <div id="phone_nav_header">Menu</div>
+      <a href="index.html" class="phone_nav_link">Trang chủ</a>
+      <a href="about.html" class="phone_nav_link">Giới thiệu</a>
+      <a href="category.html" class="phone_nav_link">Sản phẩm</a>
+      <a href="signup.html" class="phone_nav_link">Đăng ký</a>
+    </div>
     <div id="main_panel">
       <div id="main_text">
         <div class="main_text_heading">Giới thiệu về nhóm 7</div>
