--- a/product.html
+++ b/product.html
@@ -50,15 +50,20 @@
         <a href="about.html" class="top_nav_link">Tuyển dụng</a>
       </div>
     </div>
-    <div id="super_side_nav">
-      <div id="side_nav">
-        <a href="category.html">Bộ sưu tập thời trang</a>
-        <a href="category.html">Quần áo bé trai</a>
-        <a href="category.html">Quần áo bé gái</a>
-        <a href="category.html">Quần áo trẻ sơ sinh</a>
-        <a href="category.html">Trang sức</a>
-        <a href="category.html">Phụ kiện</a>
-      </div>
+    <div onclick="openSubNav(this, 'phone_nav_link')" id="phone_nav">
+      <div id="phone_nav_header">Menu</div>
+      <a href="index.html" class="phone_nav_link">Trang chủ</a>
+      <a href="about.html" class="phone_nav_link">Giới thiệu</a>
+      <a href="category.html" class="phone_nav_link">Sản phẩm</a>
+      <a href="signup.html" class="phone_nav_link">Đăng ký</a>
+    </div>
+    <div id="side_nav">
+      <a href="category.html">Bộ sưu tập thời trang</a>
+      <a href="category.html">Quần áo bé trai</a>
+      <a href="category.html">Quần áo bé gái</a>
+      <a href="category.html">Quần áo trẻ sơ sinh</a>
+      <a href="category.html">Trang sức</a>
+      <a href="category.html">Phụ kiện</a>
     </div>
     <div id="product_img"><img src="./ao-thun-la-phong.jpg" alt="" /></div>
     <div id="product_detail">
