--- a/signup.html
+++ b/signup.html
@@ -44,6 +44,13 @@
         <a href="about.html" class="top_nav_link">Tuyển dụng</a>
       </div>
     </div>
+    <div onclick="openSubNav(this, 'phone_nav_link')" id="phone_nav">
+      <div id="phone_nav_header">Menu</div>
+      <a href="index.html" class="phone_nav_link">Trang chủ</a>
+      <a href="about.html" class="phone_nav_link">Giới thiệu</a>
+      <a href="category.html" class="phone_nav_link">Sản phẩm</a>
+      <a href="signup.html" class="phone_nav_link">Đăng ký</a>
+    </div>
     <form id="main_form">
       <div class="main_form_header">Đăng kí</div>
       <input
