--- a/cart.html
+++ b/cart.html
@@ -60,6 +60,7 @@
           <div class="cart_item_info">
             <div class="cart_item_name">Áo khoác nữ đen</div>
             <div class="cart_item_price">Giá: 420.000 vnđ</div>
+            <div class="cart_item_amount">Số lượng: 1 cái</div>
           </div>
         </div>
         <div class="cart_item">
@@ -67,6 +68,7 @@
           <div class="cart_item_info">
             <div class="cart_item_name">Áo thun Spider-Man</div>
             <div class="cart_item_price">Giá: 300.000 vnđ</div>
+            <div class="cart_item_amount">Số lượng: 1 cái</div>
           </div>
         </div>
         <div class="cart_item">
@@ -74,11 +76,12 @@
           <div class="cart_item_info">
             <div class="cart_item_name">Áo thun 7 màu</div>
             <div class="cart_item_price">Giá: 200.000 vnđ</div>
+            <div class="cart_item_amount">Số lượng: 1 cái</div>
           </div>
         </div>
       </div>
       <div id="cart_summary">
-        <div>Số lượng: 3 cái</div>
+        <div>Tổng số lượng: 3 cái</div>
         <div>Tổng giá: 920.000 vnđ</div>
         <button>Thanh toán trực tuyến</button
         ><button>Thanh toán khi nhận hàng</button>
