--- a/category.html
+++ b/category.html
@@ -82,7 +82,7 @@
         </div>
         <div class="side_cate_nav_item noselect">
           <div
-            onclick="openSubNav(this.parentElement)"
+            onclick="openSubNav(this.parentElement, 'side_cate_nav_sub_item')"
             class="side_cate_nav_item_header"
           >
             Quần áo bé trai
@@ -96,7 +96,7 @@
         </div>
         <div class="side_cate_nav_item noselect">
           <div
-            onclick="openSubNav(this.parentElement)"
+            onclick="openSubNav(this.parentElement, 'side_cate_nav_sub_item')"
             class="side_cate_nav_item_header"
           >
             Quần áo bé gái
@@ -111,7 +111,7 @@
         </div>
         <div class="side_cate_nav_item noselect">
           <div
-            onclick="openSubNav(this.parentElement)"
+            onclick="openSubNav(this.parentElement, 'side_cate_nav_sub_item')"
             class="side_cate_nav_item_header"
           >
             Quần áo trẻ sơ sinh
@@ -122,7 +122,7 @@
         </div>
         <div class="side_cate_nav_item noselect">
           <div
-            onclick="openSubNav(this.parentElement)"
+            onclick="openSubNav(this.parentElement, 'side_cate_nav_sub_item')"
             class="side_cate_nav_item_header"
           >
             Phụ kiện
@@ -197,77 +197,83 @@
       <div id="main_cate_header">Quần áo bé trai</div>
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
+        <div class="main_cate_item_name">Áo thun khủng long cho bé trai</div>
+        <div>420.000 vnd</div>
+      </div>
+      <div class="main_cate_item">
+        <a href="product.html"><img src="./ao-khoac-nu.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Áo khoác màu đen cho bé gái</div>
+        <div>690.000 vnd</div>
+      </div>
+      <div class="main_cate_item">
+        <a href="product.html"><img src="./ao-thun-7-mau.jpg" alt="" /></a>
+        <div class="main_cate_item_name">
+          Áo thun 7 sắc cầu vồng cho bé trai
+        </div>
+        <div>777.000 vnd</div>
+      </div>
+      <div class="main_cate_item">
+        <a href="product.html"><img src="./ao-thun-la-phong.jpg" alt="" /></a>
+        <div class="main_cate_item_name">
+          Combo quần áo khủng long cho bé trai
+        </div>
+        <div>850.000 vnd</div>
+      </div>
+      <div class="main_cate_item">
+        <a href="product.html"><img src="./ao-thun-spider-man.jpg" alt="" /></a>
+        <div class="main_cate_item_name">
+          Combo quần áo Spider-Man cho bé trai
+        </div>
+        <div>500.000 vnd</div>
+      </div>
+      <div class="main_cate_item">
+        <a href="product.html"><img src="./kep_toc.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Kẹp tóc Elsa</div>
+        <div>40.000 vnd</div>
+      </div>
+      <div class="main_cate_item">
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
+        <div class="main_cate_item_name">Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
+        <div class="main_cate_item_name">Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
+        <div class="main_cate_item_name">Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
+        <div class="main_cate_item_name">Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
+        <div class="main_cate_item_name">Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
+        <div class="main_cate_item_name">Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
+        <div class="main_cate_item_name">Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
-        <div>420.000 vnd</div>
-      </div>
-      <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
-        <div>420.000 vnd</div>
-      </div>
-      <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
-        <div>420.000 vnd</div>
-      </div>
-      <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
-        <div>420.000 vnd</div>
-      </div>
-      <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
-        <div>420.000 vnd</div>
-      </div>
-      <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
-        <div>420.000 vnd</div>
-      </div>
-      <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div>Áo thun bé trai</div>
+        <div class="main_cate_item_name">Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
     </div>
