--- a/index.html
+++ b/index.html
@@ -82,52 +82,52 @@
       <div class="main_section">
         <div class="main_section_header">Bộ sưu tập phụ kiện</div>
         <div class="main_section_content">
-          <div class="main_section_content_item">
+          <a href="product.html" class="main_section_content_item">
             <img src="./kep_toc.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
+          </a>
+          <a href="product.html" class="main_section_content_item">
             <img src="./dep-lo.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
+          </a>
+          <a href="product.html" class="main_section_content_item">
             <img src="./cap-xach.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
+          </a>
+          <a href="product.html" class="main_section_content_item">
             <img src="./sandal.jpg" alt="" />
-          </div>
+          </a>
         </div>
       </div>
       <div class="main_section">
         <div class="main_section_header">Quần áo bán chạy</div>
         <div class="main_section_content">
-          <div class="main_section_content_item">
+          <a href="product.html" class="main_section_content_item">
             <img src="./ao-khung-long-be-trai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
+          </a>
+          <a href="product.html" class="main_section_content_item">
             <img src="./ao-ba-lo.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
+          </a>
+          <a href="product.html" class="main_section_content_item">
             <img src="./yem-jean-be-gai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
+          </a>
+          <a href="product.html" class="main_section_content_item">
             <img src="./quan-dai-kaki-be-gai.jpg" alt="" />
-          </div>
+          </a>
         </div>
       </div>
       <div class="main_section">
         <div class="main_section_header">Quần áo mới nhất</div>
         <div class="main_section_content">
-          <div class="main_section_content_item">
+          <a href="product.html" class="main_section_content_item">
             <img src="./ao-thun-ngan-tay-be-trai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
+          </a>
+          <a href="product.html" class="main_section_content_item">
             <img src="./ao-khoac-tho-ni-be-trai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
+          </a>
+          <a href="product.html" class="main_section_content_item">
             <img src="./ao-thun-ke-sac-be-trai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
+          </a>
+          <a href="product.html" class="main_section_content_item">
             <img src="./t-shirt.jpg" alt="" />
-          </div>
+          </a>
         </div>
       </div>
     </div>
