--- a/product.html
+++ b/product.html
@@ -76,47 +76,49 @@
       <div class="product_detail_item" id="product_detail_status">
         Tình trạng hàng hóa: còn hàng
       </div>
-      <div class="product_detail_item" id="product_detail_size">
-        Kích thước
-        <button
-          onclick="radio(this, '.radio_size', 'checked_radio_size')"
-          class="radio_size checked_radio_size"
-        >
-          2Y - 3Y - 20kq
-        </button>
-        <button
-          onclick="radio(this, '.radio_size', 'checked_radio_size')"
-          class="radio_size"
-        >
-          2Y - 3Y - 20kq
-        </button>
-        <button
-          onclick="radio(this, '.radio_size', 'checked_radio_size')"
-          class="radio_size"
-        >
-          2Y - 3Y - 20kq
-        </button>
-      </div>
-      <div class="product_detail_item" id="product_detail_color">
-        Màu sắc:
-        <button
-          onclick="radio(this, '.radio_color', 'checked_radio_color')"
-          class="radio_color checked_radio_color"
-        >
-          2Y - 3Y - 20kq
-        </button>
-        <button
-          onclick="radio(this, '.radio_color', 'checked_radio_color')"
-          class="radio_color"
-        >
-          2Y - 3Y - 20kq
-        </button>
-        <button
-          onclick="radio(this, '.radio_color', 'checked_radio_color')"
-          class="radio_color"
-        >
-          2Y - 3Y - 20kq
-        </button>
+      <div id="radio_group">
+        <div class="product_detail_item" id="product_detail_size">
+          Kích thước
+          <button
+            onclick="radio(this, '.radio_size', 'checked_radio_size')"
+            class="radio_size checked_radio_size"
+          >
+            2Y - 3Y - 20kq
+          </button>
+          <button
+            onclick="radio(this, '.radio_size', 'checked_radio_size')"
+            class="radio_size"
+          >
+            2Y - 3Y - 20kq
+          </button>
+          <button
+            onclick="radio(this, '.radio_size', 'checked_radio_size')"
+            class="radio_size"
+          >
+            2Y - 3Y - 20kq
+          </button>
+        </div>
+        <div class="product_detail_item" id="product_detail_color">
+          Màu sắc:
+          <button
+            onclick="radio(this, '.radio_color', 'checked_radio_color')"
+            class="radio_color checked_radio_color"
+          >
+            2Y - 3Y - 20kq
+          </button>
+          <button
+            onclick="radio(this, '.radio_color', 'checked_radio_color')"
+            class="radio_color"
+          >
+            2Y - 3Y - 20kq
+          </button>
+          <button
+            onclick="radio(this, '.radio_color', 'checked_radio_color')"
+            class="radio_color"
+          >
+            2Y - 3Y - 20kq
+          </button>
+        </div>
       </div>
       <a href="cart.html" class="button" id="product_detail_buy">Mua ngay</a>
       <button
