--- a/cart.html
+++ b/cart.html
@@ -58,7 +58,11 @@
         <div class="cart_item">
           <img src="./ao-khoac-nu.jpg" alt="" class="cart_item_img" />
           <div class="cart_item_info">
-            <div class="cart_item_name">Áo khoác nữ đen</div>
+            <div class="cart_item_name">Áo khoác nữ</div>
+            <div class="cart_item_detail">
+              <div class="cart_item_color">Màu: đen</div>
+              <div class="cart_item_size">Kích thước: 3Y - 5Y - 25kg</div>
+            </div>
             <div class="cart_item_price">Giá: 420.000 vnđ</div>
             <div class="cart_item_amount">Số lượng: 1 cái</div>
           </div>
@@ -67,6 +71,10 @@
           <img src="./ao-thun-spider-man.jpg" alt="" class="cart_item_img" />
           <div class="cart_item_info">
             <div class="cart_item_name">Áo thun Spider-Man</div>
+            <div class="cart_item_detail">
+              <div class="cart_item_color">Màu: xanh</div>
+              <div class="cart_item_size">Kích thước: 5Y - 7Y - 35kg</div>
+            </div>
             <div class="cart_item_price">Giá: 300.000 vnđ</div>
             <div class="cart_item_amount">Số lượng: 1 cái</div>
           </div>
@@ -74,7 +82,11 @@
         <div class="cart_item">
           <img src="./ao-thun-7-mau.jpg" alt="" class="cart_item_img" />
           <div class="cart_item_info">
-            <div class="cart_item_name">Áo thun 7 màu</div>
+            <div class="cart_item_name">Áo thun sọc ngang 7 sắc cầu vòng</div>
+            <div class="cart_item_detail">
+              <div class="cart_item_color">Màu: Cầu vòng</div>
+              <div class="cart_item_size">Kích thước: 3Y - 5Y - 30kg</div>
+            </div>
             <div class="cart_item_price">Giá: 200.000 vnđ</div>
             <div class="cart_item_amount">Số lượng: 1 cái</div>
           </div>
