--- a/product.html
+++ b/product.html
@@ -121,7 +121,7 @@
         </div>
       </div>
       <div class="product_detail_item" id="cart_item_amount">
-        <div id="cart_item_amount_label">Số lượng sản phẩm:</div>
+        <div id="cart_item_amount_label">Số lượng:</div>
         <button onclick="adjustNumber('cart_item_amount_input', -1)">-</button>
         <input type="number" value="1" id="cart_item_amount_input" />
         <button onclick="adjustNumber('cart_item_amount_input', 1)">+</button>
