--- a/category.html
+++ b/category.html
@@ -198,83 +198,77 @@
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div class="main_cate_item_name">Áo thun khủng long cho bé trai</div>
-        <div>420.000 vnd</div>
+        <div>120.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-khoac-nu.jpg" alt="" /></a>
-        <div class="main_cate_item_name">Áo khoác màu đen cho bé gái</div>
-        <div>690.000 vnd</div>
+        <a href="product.html"><img src="./img-9.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Quần áo khủng long bé trai</div>
+        <div>240.000 vnd</div>
       </div>
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-7-mau.jpg" alt="" /></a>
-        <div class="main_cate_item_name">
-          Áo thun 7 sắc cầu vồng cho bé trai
-        </div>
-        <div>777.000 vnd</div>
+        <div class="main_cate_item_name">Áo thun 7 sắc cầu vồng bé trai</div>
+        <div>135.000 vnd</div>
       </div>
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-la-phong.jpg" alt="" /></a>
-        <div class="main_cate_item_name">
-          Combo quần áo khủng long cho bé trai
-        </div>
-        <div>850.000 vnd</div>
+        <div class="main_cate_item_name">Quần áo khủng long bé trai</div>
+        <div>250.000 vnd</div>
       </div>
       <div class="main_cate_item">
         <a href="product.html"><img src="./ao-thun-spider-man.jpg" alt="" /></a>
-        <div class="main_cate_item_name">
-          Combo quần áo Spider-Man cho bé trai
-        </div>
-        <div>500.000 vnd</div>
+        <div class="main_cate_item_name">Quần áo Spider-Man bé trai</div>
+        <div>200.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <a href="product.html"><img src="./kep_toc.jpg" alt="" /></a>
-        <div class="main_cate_item_name">Kẹp tóc Elsa</div>
-        <div>40.000 vnd</div>
+        <a href="product.html"><img src="./img-10.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Quần áo thể thao bé trai</div>
+        <div>240.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div class="main_cate_item_name">Áo thun bé trai</div>
-        <div>420.000 vnd</div>
+        <a href="product.html"><img src="./img-1.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Quần áo thể thao bé trai</div>
+        <div>250.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div class="main_cate_item_name">Áo thun bé trai</div>
-        <div>420.000 vnd</div>
+        <a href="product.html"><img src="./img-2.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Quần áo Mickey bé trai</div>
+        <div>280.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div class="main_cate_item_name">Áo thun bé trai</div>
-        <div>420.000 vnd</div>
+        <a href="product.html"><img src="./img-3.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Quần jean ngắn bé trai</div>
+        <div>168.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div class="main_cate_item_name">Áo thun bé trai</div>
-        <div>420.000 vnd</div>
+        <a href="product.html"><img src="./img-4.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Áo thun có cổ bé trai</div>
+        <div>260.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div class="main_cate_item_name">Áo thun bé trai</div>
-        <div>420.000 vnd</div>
+        <a href="product.html"><img src="./img-5.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Quần áo thun cá voi bé trai</div>
+        <div>230.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div class="main_cate_item_name">Áo thun bé trai</div>
-        <div>420.000 vnd</div>
+        <a href="product.html"><img src="./img-6.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Áo thun Monster Road bé trai</div>
+        <div>160.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div class="main_cate_item_name">Áo thun bé trai</div>
-        <div>420.000 vnd</div>
+        <a href="product.html"><img src="./img-7.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Áo thun Road Ride bé trai</div>
+        <div>175.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div class="main_cate_item_name">Áo thun bé trai</div>
-        <div>420.000 vnd</div>
+        <a href="product.html"><img src="./img-8.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Áo thun Dinosaur Expert bé trai</div>
+        <div>185.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
-        <div class="main_cate_item_name">Áo thun bé trai</div>
-        <div>420.000 vnd</div>
+        <a href="product.html"><img src="./quan-sooc-be-trai.jpg" alt="" /></a>
+        <div class="main_cate_item_name">Quần short bé trai</div>
+        <div>125.000 vnd</div>
       </div>
     </div>
     <div id="footer">
