--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="cart.css" />
     <script src="index.js"></script>
     <script src="signup.js"></script>
-    <title>SCP Shop</title>
+    <title>SCP Shop - Giỏ hàng</title>
   </head>
   <body onload="fade()" id="bd">
     <div id="top">
@@ -56,9 +56,13 @@
     <div id="cart">
       <div id="cart_list">
         <div class="cart_item">
-          <img src="./ao-khoac-nu.jpg" alt="" class="cart_item_img" />
+          <a href="product.html"
+            ><img src="./ao-khoac-nu.jpg" alt="" class="cart_item_img"
+          /></a>
           <div class="cart_item_info">
-            <div class="cart_item_name">Áo khoác nữ</div>
+            <a href="product.html">
+              <div class="cart_item_name">Áo khoác bé gái</div>
+            </a>
             <div class="cart_item_detail">
               <div class="cart_item_color">Màu: đen</div>
               <div class="cart_item_size">Kích thước: 3Y - 5Y - 25kg</div>
@@ -68,9 +72,13 @@
           </div>
         </div>
         <div class="cart_item">
-          <img src="./ao-thun-spider-man.jpg" alt="" class="cart_item_img" />
+          <a href="product.html">
+            <img src="./ao-thun-spider-man.jpg" alt="" class="cart_item_img" />
+          </a>
           <div class="cart_item_info">
-            <div class="cart_item_name">Áo thun Spider-Man</div>
+            <a href="product.html">
+              <div class="cart_item_name">Áo thun Spider-Man</div>
+            </a>
             <div class="cart_item_detail">
               <div class="cart_item_color">Màu: xanh</div>
               <div class="cart_item_size">Kích thước: 5Y - 7Y - 35kg</div>
@@ -80,9 +88,13 @@
           </div>
         </div>
         <div class="cart_item">
-          <img src="./ao-thun-7-mau.jpg" alt="" class="cart_item_img" />
+          <a href="product.html">
+            <img src="./ao-thun-7-mau.jpg" alt="" class="cart_item_img" />
+          </a>
           <div class="cart_item_info">
-            <div class="cart_item_name">Áo thun sọc ngang 7 sắc cầu vòng</div>
+            <a href="product.html">
+              <div class="cart_item_name">Áo thun 7 sắc cầu vòng</div>
+            </a>
             <div class="cart_item_detail">
               <div class="cart_item_color">Màu: Cầu vòng</div>
               <div class="cart_item_size">Kích thước: 3Y - 5Y - 30kg</div>
