--- a/category.html
+++ b/category.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="category.css" />
     <script src="index.js" defer></script>
-    <title>SCP Shop</title>
+    <title>SCP Shop - Thời trang bé trai</title>
   </head>
   <body onload="fade()" id="bd">
     <div id="top">
