--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="index.css" />
     <script src="index.js" defer></script>
-    <title>SCP Shop</title>
+    <title>SCP Shop - Shop thời trang trẻ em</title>
   </head>
   <body onload="fade()" id="bd">
     <div id="top">
