--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="signup.css" />
     <script src="index.js"></script>
-    <title>SCP Shop</title>
+    <title>SCP Shop - Đăng ký</title>
   </head>
   <body onload="fade()" id="bd">
     <div id="top">
