--- a/about.html
+++ b/about.html
@@ -60,11 +60,29 @@
     <div id="main_panel">
       <div id="main_text">
         <div class="main_text_heading">Giới thiệu về nhóm 7</div>
-        <div>Đề tài: Thời trang trẻ em</div>
-        <div>
-          Thành viên: <br />- Trần Đức Nhật Nam - MSSV: 2001206925<br />- Kiều
-          Đạo Nhất San - MSSV: 2001206925 <br />- Thập Anh Hào - MSSV:
-          2001206925
+        <div class="main_text_body">
+          <div>
+            <div class="main_text_body_heading">Đề tài đồ án:</div>
+            <div class="main_text_body_content">
+              Thiết kế trang web thời trang trẻ em
+            </div>
+          </div>
+          <div>
+            <div class="main_text_body_heading">Nhân sự của nhóm:</div>
+            <div class="main_text_body_content">
+              <div>- Trần Đức Nhật Nam - MSSV: 2001206925</div>
+              <div>- Kiều Đạo Nhất San - MSSV: 2001206997</div>
+              <div>- Thập Anh Hào - MSSV: 2001206982</div>
+            </div>
+          </div>
+        </div>
+        <div class="main_text_footer">
+          <div class="main_text_footer_heading">Nhà tài trợ:</div>
+          <img src="./HTML-Icon.png" alt="" />
+          <img src="./CSS-Icon.png" alt="" />
+          <img src="./JavaScript-Icon.png" alt="" />
+          <img src="./W3School-Icon.png" alt="" />
+          <img src="./Stacj-Overflow-Icon.png" alt="" />
         </div>
       </div>
     </div>
